# count-hashed-files

./: .gitignore  README.md  main.py  pyproject.toml
service/: file_validator.py  generate.py
src/count_hashed_files/: __main__.py
src/count_hashed_files/service/: generate.py
src/count_hashed_files/view/: interface.py
view/: interface.py
